Remove Twitter integration
A Twitter Stats widget was one of the first widgets in this dashboard project. Since February 2023, the access to the Twitter API is no longer free. Even if a free tier is introduced one day, Musk irreversibly lost any trust to use his platform.
